--- a/Idivisual Work/LYH/demo/src/main/resources/application.properties
+++ b/Idivisual Work/LYH/demo/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-server.port=8081
+# server host
+server.port = 8081
+
+# database
+spring.datasource.url: jdbc:mysql://localhost:3306/developerplus?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username = springboot
+spring.datasource.password = password
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+# mysql
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# jsp location
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
