--- a/Developer Plus/demo/src/main/resources/application.properties
+++ b/Developer Plus/demo/src/main/resources/application.properties
@@ -1,16 +1,28 @@
 # server host
 server.port = 8081
 
+# hikari
+spring.datasource.hikari.max-lifetime=100000
+spring.datasource.hikari.maximum-pool-size=10
+
 # database
-spring.datasource.url: jdbc:mysql://localhost:3306/developerplus?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username = springboot
-spring.datasource.password = password
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.developerplus.jdbcUrl: jdbc:mysql://localhost:3306/developerplus?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.developerplus.username = springboot
+spring.datasource.developerplus.password = password
+spring.datasource.developerplus.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.datasource.likecount.jdbcUrl: jdbc:mysql://localhost:3306/likeCount?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.likecount.username = springboot
+spring.datasource.likecount.password = password
+spring.datasource.likecount.driver-class-name = com.mysql.cj.jdbc.Driver
 
 # mysql
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# logging level
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 
 # jsp location
 # spring.mvc.view.prefix=/WEB-INF/views/
