--- a/Developer Plus/demo/src/main/resources/application.properties
+++ b/Developer Plus/demo/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port = 8081
 
 # hikari
-spring.datasource.hikari.max-lifetime=100000
-spring.datasource.hikari.maximum-pool-size=10
+# spring.datasource.hikari.max-lifetime=100000
+# spring.datasource.hikari.maximum-pool-size=10
 
 # database
 spring.datasource.developerplus.jdbcUrl: jdbc:mysql://localhost:3306/developerplus?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
@@ -21,10 +21,18 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# security
+# spring.security.oauth2.client.registration.kakao.client-id = 912344
+# spring.security.oauth2.client.registration.kakao.client-secret = 클라이언트 패스워드
+# spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8081/kakao/login
+# spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+# spring.security.oauth2.client.registration.kakao.scope=profile,account_email
+# spring.security.oauth2.client.registration.kakao.client-name=kakao
+# spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+
 # logging level
-logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+# logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 
 # jsp location
 # spring.mvc.view.prefix=/WEB-INF/views/
 # spring.mvc.view.suffix=.jsp
-
