--- a/Developer Plus/demo/src/main/resources/application.properties
+++ b/Developer Plus/demo/src/main/resources/application.properties
@@ -16,6 +16,11 @@ spring.datasource.likecount.username = springboot
 spring.datasource.likecount.password = password
 spring.datasource.likecount.driver-class-name = com.mysql.cj.jdbc.Driver
 
+spring.datasource.chat.jdbcUrl: jdbc:mysql://localhost:3306/chat?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.chat.username = springboot
+spring.datasource.chat.password = password
+spring.datasource.chat.driver-class-name = com.mysql.cj.jdbc.Driver
+
 # mysql
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
