--- a/Developer Plus/demo/src/main/resources/application.properties
+++ b/Developer Plus/demo/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # server host
-server.port = 5000
-
+server.port = 8080
+spring.profiles.active=dev
+server.address=0.0.0.0
+spring.resources.static-locations = classpath:/static/
 # hikari
 # spring.datasource.hikari.max-lifetime=100000
 # spring.datasource.hikari.maximum-pool-size=10
