--- a/Developer Plus/package.json
+++ b/Developer Plus/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@toast-ui/react-editor": "^3.2.3"
+    "@toast-ui/react-editor": "^3.2.3",
+    "marked": "^5.0.5"
   }
 }
