--- a/Developer Plus/demo/src/main/resources/application.properties
+++ b/Developer Plus/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # server host
-server.port = 8080
+server.port = 8081
 spring.profiles.active=dev
 server.address=0.0.0.0
 spring.resources.static-locations = classpath:/static/
@@ -9,17 +9,17 @@ spring.resources.static-locations = classpath:/static/
 
 # database
 spring.datasource.developerplus.jdbcUrl: jdbc:mysql://localhost:3306/developerplus?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.developerplus.username = springboot
+spring.datasource.developerplus.username = root
 spring.datasource.developerplus.password = password
 spring.datasource.developerplus.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.datasource.likecount.jdbcUrl: jdbc:mysql://localhost:3306/likeCount?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.likecount.username = springboot
+spring.datasource.likecount.username = root
 spring.datasource.likecount.password = password
 spring.datasource.likecount.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.datasource.chat.jdbcUrl: jdbc:mysql://localhost:3306/chat?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.chat.username = springboot
+spring.datasource.chat.username = root
 spring.datasource.chat.password = password
 spring.datasource.chat.driver-class-name = com.mysql.cj.jdbc.Driver
 
