--- a/Developer Plus/demo/src/main/frontend/package.json
+++ b/Developer Plus/demo/src/main/frontend/package.json
@@ -15,6 +15,7 @@
     "@uiw/react-md-editor": "^3.23.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.13.0",
